Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-91417

Selection does not work in read-only text editing controls - QtWidgets

XMLWordPrintable

    • Android

      Selection of text from a read-only QLineEdit , QPlainTextEdit, QTextEdit does not work.
      You can select the text with a double tap but there is no handle to change the selection.

      Selection works fine when read-only is set to false. But it should work with read-only text also.

        For Gerrit Dashboard: QTBUG-91417
        # Subject Branch Project Status CR V

            piotrmi Piotr Mikolajczyk
            piotrmi Piotr Mikolajczyk
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes